# ml-intro-capstone-project

./: .gitignore  LICENSE  Makefile  README.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  run.sh
.github/workflows/: black.yml  flake8.yml  mypy.yml  tests.yml
src/forestml/: data.py  dataset_generator.py  pipeline.py  predict.py  train.py
tests/: test_9_evaluation_selection.py  test_data.py  test_forestml.py  test_train.py
