[tool.poetry]
name = "forestml"
version = "0.1.0"
description = "Homework for RS School Machine Learning course."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wervlad/9_evaluation_selection"
repository = "https://github.com/wervlad/9_evaluation_selection"
authors = ["Vlad Rusakov"]

[tool.poetry.scripts]
train = "forestml.train:train"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
